# gpgpt

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: calculator.hpp
test/: calculator_test.cpp
